# hcc

./: .env.sample  .gitignore  README.md  justfile
clubhouse-core/: Cargo.toml  flake.nix
clubhouse-core/src/: base64.rs  blake.rs  checksum.rs  emoji.rs  encoders.rs  encryption.rs  lib.rs  shapes.rs
clubhouse-db/: README.md  flake.nix
clubhouse-db/migration/: Cargo.toml
clubhouse-db/migration/src/: m01_000001_create_user_table.rs  m01_000002_create_user_attributes_table.rs  m01_000003_create_media_node_table.rs
clubhouse-db/nixpkgs/sea-orm-cli/: default.nix
clubhouse-db/nixpkgs/sea-orm-cli/sea-orm-cli-0.11.3/: Cargo.toml
clubhouse-server/: Cargo.toml  flake.nix
clubhouse-server/domain/: Cargo.toml
clubhouse-server/domain/src/: server_config.rs
clubhouse-server/domain/src/sea_orm/entities/: async_sessions.rs  media_node.rs  mod.rs  prelude.rs  user_attributes.rs  user_email_password.rs
clubhouse-server/src/: main.rs  wiring.rs
clubhouse-server/src/dao/: media_node.rs  user.rs
clubhouse-server/src/middleware/: authorization.rs  keyring.rs  security.rs  session.rs  user.rs
clubhouse-server/src/routes/: app.rs  brand.rs  dummy_secret.rs  handshake.rs  hcc_frame_js.rs  promo.rs
clubhouse-server/src/routes/media/: list.rs
clubhouse-server/src/routes/user/: login.rs  signup.rs
clubhouse-server/src/util/: encryption.rs  jwt.rs  mod.rs  password.rs
clubhouse-web/: Cargo.toml  README.md  flake.nix  package.json  postcss.config.js  tailwind.config.js  webpack.config.js
clubhouse-web/css/: app.css
clubhouse-web/js/: app.js  encryption.js  htmx.js
clubhouse-web/src/: encryption.rs  htmx.rs  lib.rs  media_renderer.rs
clubhouse-web/src/app/: audioplayer.rs  home.rs  state.rs  tabs.rs
