[package]
name = "domain"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "domain"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = "0.4.19"

[dependencies.sea-orm]
# path = "../../../" # remove this line in your own project
version = "^0.11.3"
features = [
  "runtime-async-std-native-tls",
  "macros",
  "debug-print",
  "with-chrono",
  "with-time",
  "sqlx-sqlite"
]
default-features = false